implemented handling of multiple toolpaths via the GUI:  * export multiple toolpaths to a single gcode file  * sort toolpaths arbitrarily  * deleted a toolpath from the list
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@177 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Version 0.2 - UNRELEASED
   * handling of multiple processing templates (e.g. "Rough", "Semi-finish" and "Finish")
   * configure "material allowance" for a minimum distance between drill and model
   * configure the "safety height" for the machine
+  * allow to manage and export (gcode) multiple toolpaths
   * based on GtkGlExt (for OpenGL)
   * visualize conflicting processing settings
   * configure "overlap" instead of "lines" and "samples"
