update the (forgotten) release date for v0.2 added more details to the release information
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@202 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
-Version 0.2 - UNRELEASED
+Version 0.2.1 - UNRELEASED
+ * 
+
+Version 0.2 - 2010-03-04
  * added an alternative GTK interface with additional features:
   * configurable 3D view settings: model / toolpath / axis / drill progress / frame rate / colors
   * manipulation of the model: rotation, flip, swap, scale, move
