--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-Version 0.2.1 - UNRELEASED
+Version 0.2.1 - 2010-03-09
  * fixed code that depended on GTK 2.16 (instead of 2.12)
  * view settings "light", "shadow" and "polygon fill" are now configurable
  * documented version problems with Debian "Lenny" and Ubuntu (before "Karmic")
