added "python-opengl" to the dependency list
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@215 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/INSTALL.TXT
+++ b/INSTALL.TXT
@@ -51,6 +51,7 @@ Unix:
 Install the following packages with your package manager:
     python
     python-gtk2
+    python-opengl
     python-gtkglext1
     python-pyode    (optional)
 
