--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ Version 0.2.2 - UNRELEASED
  * added a graphical installer for Windows (via distutils)
  * fixed broken commandline parameter "--template"
  * added workaround for ODE collision detection, that is broken under specific circumstances
+ * fixed hang with PushCutter and ODE on Windows
  * fixed "division by zero" error in non-ODE mode
  * allow to disable ODE via commandline option
  * bugs fixed in cylindrical and toroidal cutter when using dropcutter on horizontal triangles
