marked remaining spinbuttons as numerical prepared changelog for next release
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@250 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+Version 0.2.3 - UNRELEASED
+
 Version 0.2.2 - 2010-03-17
  * added a graphical installer for Windows (via distutils)
  * fixed broken commandline parameter "--template"
