fixed "overlap" calculation (thanks to bamoore01)
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@255 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,5 @@
 Version 0.2.3 - UNRELEASED
+ * fixed "overlap" calculation
 
 Version 0.2.2 - 2010-03-17
  * added a graphical installer for Windows (via distutils)
