added a warning message displayed in a Tk window (requires no dependencies) for missing dependencies This should be especially useful for Windows users, since they don't see any error messages when starting PyCAM via its menu item.
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@262 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
 Version 0.2.3 - UNRELEASED
  * fixed "overlap" calculation
+ * added a warning dialog (GUI) for missing dependencies during startup (especially useful for Windows)
 
 Version 0.2.2 - 2010-03-17
  * added a graphical installer for Windows (via distutils)
