GTK user interface change:  * separate tool and process settings  * a task is a combination of a tool and a process  * manage list of tasks  * allow batch generation of multiple toolpaths
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@272 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,9 @@
 Version 0.2.3 - UNRELEASED
+ * GUI change: tool and process settings can be combined into tasks
  * fixed "overlap" calculation
  * added a warning dialog (GUI) for missing dependencies during startup (especially useful for Windows)
+ * prevent invalid input values (zero tool radius, ...)
+ * reduced memory consumption of toolpaths for python 2.6 or above
 
 Version 0.2.2 - 2010-03-17
  * added a graphical installer for Windows (via distutils)
