improved GUI for model scaling:  * use percent value instead of a factor with up/down scaling (more intuitive)  * added separate scaling along a specific axis (proportional or not) increased value ranges of input controls up to 2000 (e.g. 2 meters or 166 feet)
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@283 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,9 @@
 Version 0.2.3 - UNRELEASED
  * GUI change: tool and process settings can be combined into tasks
+ * added export of EMC tool definitions
  * fixed "overlap" calculation
  * added a warning dialog (GUI) for missing dependencies during startup (especially useful for Windows)
+ * improved GUI for model scaling
  * prevent invalid input values (zero tool radius, ...)
  * reduced memory consumption of toolpaths for python 2.6 or above
 
