--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pycam (0.2.3-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Lars Kruse <devel@sumpfralle.de>  Mon, 05 Apr 2010 02:48:36 +0200
+
 pycam (0.2.2-1) unstable; urgency=low
 
   * Initial debianization of r243 of the SVN repo on sourceforge
