--- a/man/pycamGUI.1
+++ b/man/pycamGUI.1
@@ -1,4 +1,4 @@
-.TH PyCAM 19 "March 02010" "PyCAM" "PyCAM manual"
+.TH PyCAM 1 "April 02010" "PyCAM" "PyCAM manual"
 .SH NAME
 pycamGUI \- start the graphical user interface of the \fBPyCAM\fR Toolpath Generator
 for 3-Axis CNC machining
@@ -29,10 +29,10 @@ use the new GTK interface (default)
 use the (old) Tk interface
 .TP
 \fB\-c\fR, \fB\-\-config\fR=\fBCONFIG_FILE\fR
-load a file with processing settings (requires the GTK interface)
+load a task settings file (requires the GTK interface)
 .TP
-\fB\-\-template\fR=\fBCONFIG_TEMPLATE\fR
-enable a specific processing settings template - e.g. 'Rough', 'Semi-finish' or 'Finish'
+\fB\-\-task\fR=\fBTASK\fR
+choose a specific task from task settings by number
 (requires the GTK interface)
 .TP
 \fB\-\-disable-ode\fR
