allow to use simulation mode, even if ODE is currently not enabled (but it must be available - of course) updated changelog for the simulation mode
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@315 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,5 @@
 Version 0.2.4 - UNRELEASED
+ * added a simple simulation mode for visualizing the material penetration of a toolpath
  * join tangential moves (removes the inner points in a colinear set of adjacent path points)
  * fixed careless import of Tkinter
  * fixed typo that breaks PyCAM for Python 2.6
