prepared release of v0.2.4
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@316 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,8 @@
-Version 0.2.4 - UNRELEASED
+Version 0.2.4 - 2010-04-12
  * added a simple simulation mode for visualizing the material penetration of a toolpath
  * join tangential moves (removes the inner points in a colinear set of adjacent path points)
  * fixed careless import of Tkinter
+ * added missing INSTALL.TXT to source package
  * fixed typo that breaks PyCAM for Python 2.6
 
 Version 0.2.3 - 2010-04-05
