--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.2.5 - NOT RELEASED
+ * changed name of configuration setting "overlap" to "overlap_percent"
+   (you may need to change this name in your custom config files)
+
 Version 0.2.4 - 2010-04-12
  * added a simple simulation mode for visualizing the material penetration of a toolpath
  * join tangential moves (removes the inner points in a colinear set of adjacent path points)
