omit unnecessary moves to safety height between adjacent paths
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@335 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 Version 0.2.5 - NOT RELEASED
  * changing the unit (mm/inch) now opens a dialog for scaling the model,
    processing dimensions or tool dimensions accordingly
+ * remove unnecessary moves to safety height
  * changed name of configuration setting "overlap" to "overlap_percent"
    (you may need to change this name in your custom config files)
 
