prepared a new release
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@346 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-Version 0.2.5 - NOT RELEASED
+Version 0.2.5 - 2010-06-10
  * added support bridges for holding the object during cutting
  * calculate the estimated machine time for each toolpath
  * changing the unit (mm/inch) now opens a dialog for scaling the model,
