--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.3.0 - UNRELEASED
+ * added basic support for importing DXF contour files
+ * added basic support for engravings
+
 Version 0.2.5 - 2010-06-10
  * added support bridges for holding the object during cutting
  * calculate the estimated machine time for each toolpath
