integrated "help" links in the "help" menu -> URLs of wiki pages
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@420 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 Version 0.3.0 - UNRELEASED
  * added basic support for importing DXF contour files
  * added basic support for engravings
+ * integrated "help" links pointing to the wiki
  * allow non-square profiles for the support grid
  * fixed PushCutter
 
