--- a/Changelog
+++ b/Changelog
@@ -1,18 +1,25 @@
 Version 0.3.0 - UNRELEASED
- * added a complete commandline interface
+ * added support for importing contour paths from SVG files (requires Inkscape and pstoedit)
  * added basic support for importing simple DXF contour files
- * added support for engravings
+ * added support for engravings (along the lines of a contour model)
+ * added a feature-complete commandline interface
  * integrated "help" links pointing to the wiki
  * improved OpenGL lighting (contributed by imyrek)
- * allow non-square profiles for the support grid
- * added ability to create support grids with different x/y grid distance
- * added x/y offsets to support grid options
+ * improved flexibility of the support grid layout:
+  * allow non-square profiles for the support grid
+  * added ability to create support grids with different x/y grid distance
+  * added x/y offsets to support grid options
  * added 3D view movement and rotation with a keyboard in addition to the mouse
  * added optional support for the Psyco just-in-time compiler
+ * information about the toolpath settings are stored as comments in GCode files
+ * added a log window
  * switched default tool size from radius to diameter
+ * improved progress bar responsiveness
+ * fixed first movement in GCode: go up to safety height before moving to the side
+ * fixed model orientation of STL files created by Art of Illusion
  * fixed performance issue when using a support grid
  * fixed empty toolpath after transforming the model
- * added minor fix for PushCutter
+ * fixed various minor bugs of the toolpath generator
 
 Version 0.2.5 - 2010-06-10
  * added support bridges for holding the object during cutting
