fixed all references to pycamGUI (now: pycam)
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@590 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/man/pycam.1
+++ b/man/pycam.1
@@ -1,9 +1,9 @@
 .TH PyCAM 1 "April 02010" "PyCAM" "PyCAM manual"
 .SH NAME
-pycamGUI \- start the graphical user interface of the \fBPyCAM\fR Toolpath Generator
+pycam \- start the graphical user interface of the \fBPyCAM\fR Toolpath Generator
 for 3-Axis CNC machining
 .SH SYNOPSIS
-.B pycamGUI
+.B pycam
 [\fIoptions\fR] [\fISTL_input\fR [\fIGCode_output\fR]]
 .SH DESCRIPTION
 .PP
