--- a/INSTALL.TXT
+++ b/INSTALL.TXT
@@ -1,23 +1,5 @@
-IMPORTANT NOTICE: please read the following lines before continuing with installation
-
-
-pycam currently offers two GUI versions:
- 1) Tk interface:
-    This version was the only option up to v0.1.x. It implements almost all
-    available features, but it is not very convenient. The Tk interface will
-    probably be removed in future versions of pycam.
- 2) GTK interface:
-    The GTK interface is a recent development. It will replace the Tk interface
-    in the long term. All features are available.
-
-Add the commandline switch "--tk" if you want to use the Tk interface instead
-of the default GTK interface.
-Please verify below, that you install the specific requirements for the GUI of
-your choice.
-
-
-Dependencies of the GTK interface:
-==================================
+Dependencies of the graphical interface:
+========================================
 
 Windows:
 --------
@@ -36,7 +18,7 @@ Windows:
 
 
 Notes:
- - you will probably need to add some paths manually to your search PATH setting:
+ - you will probably need to add some directories manually to your search PATH setting:
         C:\Programs\Common Files\GTK\bin;C:\Programs\Python25;C:\Programs\GtkGLExt\1.0\bin
    (this is just an example - adjust it to your specific installation paths)
  - run a python console and check if the following commands work:
@@ -69,69 +51,12 @@ package repository list and run the following:
 Afterwards you can remove the new package repository again.
 
 
-
-Dependencies of the Tk interface: 
-=================================
-
-Windows:
---------
-
-    Python 2.5
-
-    PyOpenGL :  http://pyopengl.sourceforge.net/
-                http://downloads.sourceforge.net/pyopengl/PyOpenGL-3.0.1.win32.exe
-
-    TOGL: http://downloads.sourceforge.net/togl/Togl2.0-8.4-Windows.zip
-          (just copy the directory Togl2.0 into Python25/tcl)
-
-    GLUT :      http://www.hennigbuam.de/georg/downloads/glut-3.7.6-wheel_mingw.zip
+Hint: installing 'python-psyco' will probably speed up processing speed.
 
 
+Minimal requirements for non-GUI mode
+=====================================
+If you plan to use PyCAM only in batch mode (without a graphical user
+interface), then you just need to install Python.
+See the manpage (man pycam) or the output of "pycam --help" for further defails.
 
-
-
-Unix:
------
-
-    Install PyOpenGL, Togl, Glut using your package manager.
-
-Or compile from source:
-          http://downloads.sourceforge.net/pyopengl/PyOpenGL-3.0.0.tar.gz
-
-In case Togl is not available or not working, I suggest to compile Togl yourself. 
-
-          http://downloads.sourceforge.net/togl/Togl2.0-src.tar.gz
-
-Install the source packages for tcl and tk using your package manager.
-
-	cd ~/Togl2.0 
-	./configure --prefix=/usr --exec-prefix=/usr --enable-threads 
-	make 
-	make install
-
-or, failing that, for download the sources for the same version of tcl and tk 
-as you have installed on your system:
-(http://sourceforge.net/project/showfiles.php?group_id=10894&package_id=10452) 
- 
-Togl only needs access to a few header files that are not part of the 
-binary distributions... 
- 
-I unpacked the tcl and tk sources next to the Togl sources in my home directory, then 
-    cd ~/tcl-8.5.5/unix; 
-	./configure 
-	cd ~/tk-8.5.5/unix; 
-	./configure 
-	cd ~/Togl2.0; 
-	./configure --with-tcl=$HOME/tcl-8.5.5 --with-tk=$HOME/tk-8.5.5 \
-                    --prefix=/usr --exec-prefix=/usr --enable-threads 
-        make 
-	make install
-
-
-For ubuntu:
-    (assuming you have tcl8.4, if not, replace 8.4 by 8.5 below)
-
-    install the packages "tcl8.4dev" and "tk8.4dev" (and maybe "Freeglut3-Dev" and "libxmu-dev")
-    ./configure --with-tcl=/usr/share/tcltk/tcl8.4/ --with-tk=/usr/share/tcltk/tk8.4/ --enable-threads
-    make
-    sudo make install
