added a "recent files" item to the menu
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@655 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ Version 0.3.1 - UNRELEASED
  * added automatic support grid positioning for contour models
  * allow to reverse the direction of a 2D contour model
  * added optional "orthogonal" view (instead of perspective)
+ * added a "recent files" item to the file menu
 
 Version 0.3.0 - 2010-08-16
  * added support for importing contour paths from SVG files (requires Inkscape and pstoedit)
