--- a/INSTALL.TXT
+++ b/INSTALL.TXT
@@ -53,6 +53,8 @@ package repository list and run the following:
     apt-get install python-pyode python-opengl
 Afterwards you can remove the new package repository again.
 
+Users of Python 2.5 with multiple CPU cores may want to install the package
+"python-processing". This enables multi-threading for Python before v2.6.
 
 MacOS
 -----
