--- a/Changelog
+++ b/Changelog
@@ -1,12 +1,16 @@
 Version 0.3.1 - UNRELEASED
- * added automatic support grid positioning for contour models
+ * use multiple threads for some toolpath strategies
  * added an improved contour toolpath strategy (ContourFollow)
   * see http://fab.senselab.org/node/43
  * added options for conventional/climb milling
+ * added automatic support grid positioning for contour models
  * allow to reverse the direction of a 2D contour model
- * added optional "orthogonal" view (instead of perspective)
- * added a "recent files" item to the file menu
- * added the transparency (alpha) component to all configurable colors
+ * beautification of the process name (via python-setproctitle)
+ * Usability:
+  * added optional "orthogonal" view (instead of perspective)
+  * added a "recent files" item to the file menu
+  * added the transparency (alpha) component to all configurable colors
+  * pre-select output filenames of "Save as" dialogs based on the name of the model file
 
 Version 0.3.0 - 2010-08-16
  * added support for importing contour paths from SVG files (requires Inkscape and pstoedit)
