some last release preparations
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@794 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-Version 0.4 - UNRELEASED
+Version 0.4 - 2010-10-19
  * use all available CPU cores for parallel processing
   * this requires at least Python 2.6 or the "python-multiprocessing" package
  * a standalone windows executable is available (experimental)
