--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pycam (0.4-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Lars Kruse <devel@sumpfralle.de>  Tue, 19 Oct 2010 12:11:27 +0200
+
 pycam (0.3-1) unstable; urgency=low
 
   * new upstream release
