added support for EPS/PS contour files
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@802 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+Version 0.4.1 - UNRELEASED
+ * added support for EPS/PS contour files
+
 Version 0.4 - 2010-10-19
  * use all available CPU cores for parallel processing
   * this requires at least Python 2.6 or the "python-multiprocessing" package
