implemented adaptive DropCutter positioning  * see a blog post of Anders Wallin for more details: http://www.anderswallin.net/2010/10/adaptive-sampling-drop-cutter/ simplified the "max_height" detection
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@815 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 Version 0.4.1 - UNRELEASED
  * added support for EPS/PS contour files
+ * added adaptive positioning for DropCutter strategy (improves precision)
+
+Version 0.4.0.1 - 2010-10-24
+ * disabled parallel processing for Windows standalone executable
+   (a real fix will follow later)
 
 Version 0.4 - 2010-10-19
  * use all available CPU cores for parallel processing
