added climb and conventional milling style to ContourFollow and Engrave strategy optional visualization of directions (for contour models, toolpaths and triangle's normals)
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@816 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,8 @@
 Version 0.4.1 - UNRELEASED
  * added support for EPS/PS contour files
  * added adaptive positioning for DropCutter strategy (improves precision)
+ * allow conventional/climb milling style for ContourFollow and Engrave strategies
+ * optional visualization of toolpath direction
 
 Version 0.4.0.1 - 2010-10-24
  * disabled parallel processing for Windows standalone executable
