added "view items" buttons to the 3D view added wiki link for http://sourceforge.net/apps/mediawiki/pycam/index.php?title=3D_View
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@894 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -11,6 +11,7 @@ Version 0.4.1 - UNRELEASED
  * unify DropCutter behaviour for models that are higher than the defined bounding box
   * always move up to safety height in this case
  * optional visualization of toolpath direction
+ * visibility of 3D view items is now configurable in the 3D window
 
 Version 0.4.0.1 - 2010-10-24
  * disabled parallel processing for Windows standalone executable
