--- a/Changelog
+++ b/Changelog
@@ -9,7 +9,7 @@ Version 0.4.1 - UNRELEASED
  * added a very simple "pocketing" mode for 2D models
  * added 2D projection of 3D models
  * added toolpath cropping 
- * added support for DXF feature "LWPOLYLINE"
+ * added support for DXF features "LWPOLYLINE" and "ARC"
  * added a configuration setting for automatically loading a custom task settings file on startup
  * added a simple "undo" feature for reversing model manipulations
  * added a minimum step width for GCode positions to be written
