added support for almost all missing DXF features - incl. 3D models added a FontCache object for incremental font loading (useful for DXF files with text elements)
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1017 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -11,7 +11,9 @@ Version 0.5 - UNRELEASED
  * added automatic repair of inconsistent polygon winding (inside/outside detection)
  * added toolpath cropping 
  * added toolpath grid pattern: clone a single toolpath in rows and columns
- * added support for DXF features "LWPOLYLINE" and "ARC"
+ * added support for more DXF features:
+  * 2D: "LWPOLYLINE", "ARC", "TEXT", "MTEXT", "CIRCLE", "POLYLINE"
+  * 3D: "3DFACE"
  * added a configuration setting for automatically loading a custom task settings file on startup
  * added a simple "undo" feature for reversing model manipulations
  * GCode features:
